--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@ body {
 }
 
 nav {
+  margin-bottom: 2rem;
   padding: 0.875rem 0;
   width: 100%;
   box-shadow: 0 0 3px 3px rgba(#444444, 0.1);
@@ -46,6 +47,40 @@ nav {
 
       &:hover {
         color: #444444;
+      }
+    }
+  }
+}
+
+main.invoices {
+  display: grid;
+  grid-template-columns: 0.5fr 1.5fr;
+
+  aside {
+    h3 {
+      margin-bottom: 0.375rem;
+      color: #777777;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 1.25rem;
+      padding: 2rem 0;
+      border: 1px solid #bbbbbb;
+      border-radius: 5px;
+      text-align: center;
+      list-style-type: none;
+
+      a {
+        color: #777777;
+        font-weight: 500;
+        text-decoration: none;
+        transition: all 0.3s ease;
+
+        &:hover {
+          color: #444444;
+        }
       }
     }
   }
