--- a/src/index.scss
+++ b/src/index.scss
@@ -60,16 +60,17 @@ main.invoices {
     h3 {
       margin-bottom: 0.375rem;
       color: #777777;
+      text-align: center;
     }
 
     ul {
       display: flex;
       flex-direction: column;
       gap: 1.25rem;
-      padding: 2rem 0;
+      padding: 2rem 1rem;
       border: 1px solid #bbbbbb;
       border-radius: 5px;
-      text-align: center;
+      // text-align: center;
       list-style-type: none;
 
       a {
