--- a/src/index.scss
+++ b/src/index.scss
@@ -69,13 +69,13 @@ main.invoices {
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
 
-  aside {
-    h3 {
-      margin-bottom: 0.375rem;
-      color: #777777;
-      text-align: center;
-    }
+  h3 {
+    margin-bottom: 0.375rem;
+    color: #777777;
+    text-align: center;
+  }
 
+  aside {
     ul {
       display: flex;
       flex-direction: column;
@@ -96,6 +96,12 @@ main.invoices {
           color: #444444;
         }
       }
+    }
+  }
+
+  section {
+    .invoice-item {
+      padding: 2rem;
     }
   }
 }
